--- a/JSPros/gitRepos/forbidden.html
+++ b/JSPros/gitRepos/forbidden.html
@@ -9,7 +9,7 @@
   <body>
     <section class="primarySection">
       <img src="./images/code-error.svg" alt="404 Not Found" />
-      <h1>You're not Supposed to click on it, duh!</h1>
+      <h1 class="forbiddenHeading">You're not Supposed to click on it, duh!</h1>
     </section>
   </body>
 </html>
